user-authentication/apps-scp.yaml
---
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: codesalot-security-policy
  namespace: default
spec:
  targetRef:
    group: gateway.networking.k8s.io
    kind: Gateway
    name: apps
  # CORS configuration for web browser requests
  cors:
    allowOrigins:
    - "https://<YOUR_DOMAIN>"

    allowMethods:
    - GET
    - POST
    - PUT
    - DELETE
    - OPTIONS
    - PATCH
    maxAge: "24h"
    allowCredentials: true
  oidc:
    provider:
      issuer: <YOUR_COGNITO_ISSUER_URL>
    clientID: <YOUR_COGNITO_CLIENT_ID>
    clientSecret:
      name: cognito-client-secret
    cookieNames:
      accessToken: AccessToken
      idToken: IdToken
    cookieConfig:
      sameSite: Lax
    redirectURL: https://%REQ(:authority)%/oauth2/callback
    forwardAccessToken: true
    passThroughAuthHeader: true
    scopes: 
    - "openid"
    - "profile"
    - "email"
  jwt:
    providers:
    - name: aws-cognito
      issuer: <YOUR_COGNITO_ISSUER_URL>
      remoteJWKS:
        uri: <YOUR_COGNITO_JWKS_URL/.well-known/jwks.json>
